--- a/app/sass/partials/_navbar.scss
+++ b/app/sass/partials/_navbar.scss
@@ -160,7 +160,7 @@
     width: 35px;
     position: absolute;
     top: 2.3rem;
-    right: 0;
+    right: 1rem;
     z-index: 2;
     display: flex;
     flex-direction: column;
